--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2",
-    "sqlite": "^4.0.23",
-    "sqlite3": "^4.2.0"
+    "better-sqlite3": "^7.5.0",
+    "express": "^4.17.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
