--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "server": "cd server && npm run start",
     "client": "cd client && npm run start",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "cd client && npm test"
   },
   "repository": {
     "type": "git",
